fix: logos are now the same size with more centered spacing

--- a/index.css
+++ b/index.css
@@ -25,8 +25,11 @@ p {
 }
 
 #fa-icon img {
-    width: 35px;
+    height: 40px;
     filter: invert(100%) drop-shadow(0 0 10px black);
+}
+
+#fa-icon a:first-child {
     margin-right: 20px;
 }
 
@@ -37,10 +40,6 @@ p {
 
 a {
     text-decoration: none;
-}
-
-#last-icon {
-    margin-right: 0;
 }
 
 @media only screen and (max-width: 500px) and (max-height: 4895px) {
